--- a/client/src/pages/constructor/constructor.sass
+++ b/client/src/pages/constructor/constructor.sass
@@ -56,14 +56,14 @@ h3
     padding-left: 80px
     padding-right: 80px
 
-
-
 .mob_browser_content
     background-color: white
     height: 100%
+    padding: 15px  
     overflow: scroll
+
     div
-        margin: 15px
+        margin-bottom: 15px
         height: 492px
         // width: 100%
         background-color: grey
